--- a/shared/components/public-footer.html
+++ b/shared/components/public-footer.html
@@ -105,4 +105,7 @@
             21+ ONLY • ENJOY RESPONSIBLY
         </div>
     </div>
+    <div class="max-w-[1440px] mx-auto pt-8 flex justify-center">
+        <img src="../../assets/images/Logo bianco.png" alt="ADM Logo" class="h-16 object-contain opacity-80">
+    </div>
 </footer>
